Receive vesting and token addresses, request and parse blockchain data

--- a/ui/package.json
+++ b/ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "chart.js": "^2.7.0",
+    "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-chartjs-2": "^2.6.4",
