--- a/package.json
+++ b/package.json
@@ -1,41 +1,25 @@
 {
-  "name": "truffle-init-webpack",
-  "version": "0.0.2",
-  "description": "Frontend example using truffle v3",
-  "scripts": {
-    "lint": "eslint ./",
-    "build": "webpack",
-    "dev": "webpack-dev-server"
-  },
-  "author": "Douglas von Kohorn",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.14.0",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-mocha": "^4.8.0",
-    "eslint-plugin-promise": "^3.0.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "html-webpack-plugin": "^2.28.0",
-    "json-loader": "^0.5.4",
-    "style-loader": "^0.13.1",
-    "truffle-contract": "^1.1.11",
-    "web3": "^0.18.2",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
-  },
+  "name": "ui",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "web3": "^0.18.4",
+    "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.0",
+    "moment": "^2.19.1",
+    "react": "^16.0.0",
+    "react-bootstrap": "^0.31.3",
+    "react-chartjs-2": "^2.6.4",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.14",
+    "truffle-contract": "^1.1.11",
+    "web3": "^1.0.0-beta.23",
     "zeppelin-solidity": "^1.3.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
