--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "1.0.14",
     "truffle-contract": "^1.1.11",
     "web3": "^1.0.0-beta.23",
-    "zeppelin-solidity": "^1.3.0"
+    "zeppelin-solidity": "git+ssh://git@github.com/OpenZeppelin/zeppelin-solidity.git"
   },
   "scripts": {
     "start": "react-scripts start",
