--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "ui",
+  "name": "Token Vesting dApp",
   "version": "0.1.0",
   "private": true,
+  "author": "Martín Triay <martriay@gmail.com>",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "chart.js": "^2.7.0",
@@ -15,12 +16,12 @@
     "require-symlink": "^0.2.0",
     "truffle-contract": "^1.1.11",
     "web3": "^1.0.0-beta.23",
-    "zeppelin-solidity": "git+ssh://git@github.com/OpenZeppelin/zeppelin-solidity.git"
+    "zeppelin-solidity": "git+https://git@github.com/OpenZeppelin/zeppelin-solidity.git"
   },
   "scripts": {
     "start": "require-link && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "build": "require-link && react-scripts build",
+    "test": "require-link && react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "requireSymlinks": {
