--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Token Vesting dApp",
+  "name": "token-vesting-ui",
   "version": "0.1.0",
   "private": true,
   "author": "Martín Triay <martriay@gmail.com>",
