--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "require-symlink": "^0.2.0",
+    "truffle": "^3.4.11",
     "truffle-contract": "^1.1.11",
     "web3": "^1.0.0-beta.23",
     "zeppelin-solidity": "git+https://git@github.com/OpenZeppelin/zeppelin-solidity.git"
